# obscuro

./: .gitignore  Cargo.toml  README.md  log
.cargo/: config
src/: ata.rs  gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  mem.rs  terminal.rs
src/ata/: blockdevice.rs  mod.rs
src/blockdev/: mod.rs
sys/: build.sh  delete.sh  test.sh  x.sh
sys/extras/: grub.cfg
