[package]
name = "obscuro"
version = "0.1.0"
authors = ["Skye Bleed <skyebleed@mailfence.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.2.0"
x86_64 = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
